# cmake-module

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.rst
.github/workflows/: tests.yml
cmake/: FindNetCDF.cmake  FindUDUNITS2.cmake
tests/: CMakeLists.txt  test_netcdf_cxx.cpp
tests/DebugASanBuildType/: CMakeLists.txt  test_asan_c.c  test_asan_cxx.cpp
tests/FindNetCDF/: CMakeLists.txt  test_netcdf_c.c
tests/FindUDUNITS2/: CMakeLists.txt  test_udunits2.cpp
tests/find_netcdf/: CMakeLists.txt  test_netcdf_c.c  test_netcdf_cxx.cpp  test_netcdf_f77.f  test_netcdf_f90.f90
